# llm-text2sql-eval

./: .env.example  .gitattributes  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
data/spider2/: tasks.jsonl
data/tpcds/: duckdb.db  schema.json  tasks.jsonl
docs/en/: EXTENDING.md  PROMPTS.md  RESULTS.md
docs/en/architectures/: HYBRID.md  PLAIN.md  SELF_CONSISTENCY.md  SGR.md  SQL_FACTORY.md
docs/ru/: EXTENDING.md  PLACEHOLDERS.md  PROMPTS.md  RESULTS.md
docs/ru/architectures/: HYBRID.md  PLAIN.md  SELF_CONSISTENCY.md  SGR.md  SQL_FACTORY.md
runs/bird/gpt-oss-120b/plain/: bird_sqlite_debug.md  report.md  summary.json
runs/bird/qwen3-32b/plain/: bird_sqlite_debug.md  report.md  summary.json
runs/bird/qwen3-coder-next/hybrid/: report.md  (+2 more)
src/evalsuite/: __init__.py  __main__.py  cli.py  orchestrator.py
src/evalsuite/architectures/: __init__.py  hybrid.py  plain.py  self_consistency.py  similarity.py  single.py  sql_factory.py
src/evalsuite/benchmarks/: base.py  bird.py  spider2.py  tpcds.py
src/evalsuite/compare/: comparator.py  utils.py
src/evalsuite/core/: __init__.py  config.py  storage.py  types.py
src/evalsuite/pipeline/: aggregation.py  preflight.py  result_signature.py  schema.py  schema_extract.py  sql_sanitize.py  toolchain.py  utils.py
src/evalsuite/reporting/: bench_debug.py  report.py
tests/: test_comparator.py  test_config_roundtrip.py  test_hybrid.py  test_hybrid_e2e.py  test_placeholders.py  test_result_signature.py  test_sgr.py  test_smoke.py  test_sql_factory.py  test_sql_factory_integration.py
(+3577 files in other folders)
