[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evalsuite"
version = "0.1.0"
description = "Unified SQL evaluation suite for Bird SQLite, Spider2, and TPC-DS"
requires-python = ">=3.10"
dependencies = [
  "rich",
  "pyyaml",
  "requests",
  "duckdb",
  "sqlglot",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "F",     # pyflakes (unused imports, etc.)
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade
]
ignore = [
  "E501",  # line length (handled by formatter)
  "E402",  # import not at top (needed for pytest.importorskip pattern)
  "E741",  # ambiguous variable name (l/r in comparator is fine)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
